--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.alexcotte</groupId>
-  <artifactId>qswp</artifactId>
-  <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>qswp Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+
+		<modelVersion>4.0.0</modelVersion>
+		<groupId>com.alexcotte</groupId>
+		<artifactId>qswp</artifactId>
+		<packaging>war</packaging>
+		<version>1.0-SNAPSHOT</version>
+		<name>qswp Maven Webapp</name>
+		<url>http://maven.apache.org</url>
+
+	<properties>
+		<spring-core>4.3.9.RELEASE</spring-core>
+		<servlet-api>3.1.0</servlet-api>
+		<log4j>2.8.2</log4j>
+		<jstl>1.2</jstl>
+	</properties>
   <dependencies>
   
 	    <dependency>
@@ -19,34 +27,34 @@
 	    <dependency>
 	    	<groupId>org.springframework</groupId>
 	    	<artifactId>spring-web</artifactId>
-	    	<version>4.3.9.RELEASE</version>
+	    	<version>${spring-core}</version>
 	    </dependency>
 	    <dependency>
 	    	<groupId>org.springframework</groupId>
 	    	<artifactId>spring-webmvc</artifactId>
-	    	<version>4.3.9.RELEASE</version>
+	    	<version>${spring-core}</version>
 	    </dependency>
 	    
 	    <dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
+			<version>${servlet-api}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<version>${jstl}</version>
 		</dependency>
 		<dependency>
 	    <groupId>org.apache.logging.log4j</groupId>
 	    <artifactId>log4j-api</artifactId>
-	    <version>2.8.2</version>
+	    <version>${log4j}</version>
 	  </dependency>
 	  <dependency>
 	    <groupId>org.apache.logging.log4j</groupId>
 	    <artifactId>log4j-core</artifactId>
-	    <version>2.8.2</version>
+	    <version>${log4j}</version>
 	  </dependency>
   </dependencies>
   <build>
